--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -63,13 +63,13 @@
   $("#view-signup").click( function() {
     $("#display-sign-in").toggle();
     $("#display-log-in").toggle();
-    if ($("#view-signup").text() == "Or Sign In"){
+    if ($("#view-signup").text() == "Or Create Account"){
       $("#view-signup").text("Change to Login");
     }else{
-      $("#view-signup").text("Or Sign In");
+      $("#view-signup").text("Or Create Account");
     }
     if ($("#title-card").text() == "Login"){
-      $("#title-card").text("Sign In");
+      $("#title-card").text("Create Account");
     }else{
       $("#title-card").text("Login");
     }
