--- a/app/views/layouts/_navNotLoggedIn.html.haml
+++ b/app/views/layouts/_navNotLoggedIn.html.haml
@@ -1,4 +1,4 @@
 #nav
   .contents
-    %img#logo.left-justify
+    %img#logo.left-justify{:src => "http://cheshirepus.com/mysongis_logo.png"}
       #login-container
