--- a/app/views/layouts/_simplenav.html.haml
+++ b/app/views/layouts/_simplenav.html.haml
@@ -21,4 +21,4 @@
       #login-container
         =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "logout-button"
         =link_to "Edit Profile", edit_user_registration_path, :class => "edit-button"
-    %img#logo.left-justify
+    %img#logo.left-justify{:src => "http://cheshirepus.com/mysongis_logo.png"}
