--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,5 +1,6 @@
 = render 'layouts/nolognav'
 %h1.away-from-edge Edit Profile
+= render 'layouts/error_messages', object: resource
 %div.form-box
   = devise_error_messages!
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }, validate: true) do |f|
@@ -21,19 +22,19 @@
       = f.text_field :current_password,
         :value => "Current Password",
         :class => "new-user",
-        :type => "password",
+        :type => "text",
         :autocomplete => "off",
         :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000000';this.type='password'}",
-        :onblur => "if(this.value==''){this.value='Current Password';this.type='password'}"
+        :onblur => "if(this.value==''){this.value='Current Password';this.type='text'}"
       = f.text_field :password,
         :value => "New Password",
         :autocomplete => "off",
-        :type => "password",
+        :type => "text",
         :class => "new-user",
         :style => "color:#000000;background-color:white;",
-        :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000000';this.type='password'}",
-        :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#000000';this.type='password'}"
+        :onfocus => "if(this.value=='New Password'){this.value='';this.style.color = '#000000';this.type='password'}",
+        :onblur => "if(this.value==''){this.value='New Password';this.style.color = '#000000';this.type='text'}"
       = f.text_field :name,
         :value => "#{@name}",
         :class => "new-user",
