--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -237,6 +237,10 @@
   clear: both;
 }
 
+.listen-to-song-button {
+  margin-top: 165px;
+}
+
 @media all {
  .big-form {
   font-size: 2rem; /*!important*/
