songpicker in create account

--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -241,6 +241,10 @@
   margin-top: 165px;
 }
 
+.not-bold {
+  font-weight: normal;
+}
+
 @media all {
  .big-form {
   font-size: 2rem; /*!important*/
