--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -1,8 +1,3 @@
-.hidden {
-  display: none;
-  height: 0px;
-  width: 0px;
-}
 
 .invisible {
   position: absolute;
@@ -251,7 +246,7 @@
   width: 500px; /*!important*/
  }
  .img-upload {
-  height: 40px;
+  height: 34px;
   padding-top: 10px;
  }
 }
@@ -264,3 +259,13 @@
     display: none;
   }
 }*/
+
+.hidden {
+  display: none;
+  height: 0px;
+  width: 0px;
+}
+
+.hidden-button {
+  display: none;
+}
