--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,7 +3,7 @@
 = render 'layouts/error_messages', object: resource
 %div.form-box
   = devise_error_messages!
-  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }, validate: true) do |f|
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }, validate: true, id: "editing-form") do |f|
     - if !@omni
       = f.text_field :username,
         :value => "#{@username}",
@@ -40,9 +40,9 @@
         :class => "new-user",
         :autocomplete => "off",
         :style => "color:#000000;background-color:white;",
-        :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000000';}",  
+        :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000000';}",
         :onblur => "if(this.value==''){this.value='#{@name}'}"
-      #explanation 
+      #explanation
         What to do when your profile is visited:
       = f.radio_button :playMethod, "Random", :checked => true, :id => "pm1"
       %label{:for => "pm1"} Random
@@ -53,7 +53,7 @@
         :class => "password-margin new-user pic-url",
         :autocomplete => "off",
         :style => "color:#000000;background-color:white;",
-        :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000000';}",  
+        :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000000';}",
         :onblur => "if(this.value==''){this.value='#{@picture}';}"
       .nav-button.upload-picture
         Upload Profile Picture
@@ -64,7 +64,7 @@
       #target
         = f.submit "Save", class: "submit-button"
     -else
-      = f.text_field :username, 
+      = f.text_field :username,
         :class => "new-user",
         :value => "#{@username}",
         :style => "color:#000000;background-color:white;",
