--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -10,7 +10,8 @@
         :class => "new-user",
         :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",
-        :onblur => "if(this.value==''){this.value='#{@username}';}"
+        :onblur => "if(this.value==''){this.value='#{@username}';}",
+        :autocapitalize => "none"
       = f.text_field :email,
         :value => "#{@email}",
         :class => "new-user",
@@ -18,7 +19,8 @@
         :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='#{@email}'){this.value='';this.style.color = '#000000';}",
         :color => "white",
-        :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}"
+        :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}",
+        :autocapitalize => "none"
       = f.text_field :current_password,
         :value => "Current Password",
         :class => "new-user",
@@ -26,7 +28,8 @@
         :autocomplete => "off",
         :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000000';this.type='password'}",
-        :onblur => "if(this.value==''){this.value='Current Password';this.type='text'}"
+        :onblur => "if(this.value==''){this.value='Current Password';this.type='text'}",
+        :autocapitalize => "none"
       = f.text_field :password,
         :value => "New Password",
         :autocomplete => "off",
@@ -34,7 +37,8 @@
         :class => "new-user",
         :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='New Password'){this.value='';this.style.color = '#000000';this.type='password'}",
-        :onblur => "if(this.value==''){this.value='New Password';this.style.color = '#000000';this.type='text'}"
+        :onblur => "if(this.value==''){this.value='New Password';this.style.color = '#000000';this.type='text'}",
+        :autocapitalize => "none"
       = f.text_field :name,
         :value => "#{@name}",
         :class => "new-user",
@@ -70,7 +74,8 @@
         :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='#{@username}'){this.value='';this.style.color = '#000000';}",
         :color => "white",
-        :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#000000';}"
+        :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#000000';}",
+        :autocapitalize => "none"
       = f.text_field :email,
         :value => "#{@email}",
         :class => "new-user",
@@ -78,7 +83,8 @@
         :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='#{@email}'){this.value='';this.style.color = '#000000';}",
         :color => "white",
-        :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}"
+        :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}",
+        :autocapitalize => "none"
       = f.text_field :name,
         :value => "#{@name}",
         :class => "new-user",
