--- a/app/views/layouts/_simplenav.html.haml
+++ b/app/views/layouts/_simplenav.html.haml
@@ -14,7 +14,8 @@
             :autocomplete => "off",
             :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
             :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
-            :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
+            :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}",
+            :autocapitalize => "none"
           .nav-button.smallnav
             = f.submit "Login", :class => 'submit-button'
     -else
