--- a/app/views/layouts/_nolognav.html.haml
+++ b/app/views/layouts/_nolognav.html.haml
@@ -2,4 +2,4 @@
   .contents
     %img#logo.left-justify{:src => "http://cheshirepus.com/mysongis_logo.png"}
       #login-container
-        =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "logout-button"
+        =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "single-logout-button"
