--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
     %link{:href => "https://fonts.googleapis.com/css?family=Rock+Salt|Bangers", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "http://cheshirepus.com/mysongis.css", :rel => "stylesheet", :type => "text/css"}
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
+    %meta{:content => "user-scalable=no, user-scalable=0"}
   %body
     = yield
   %footer
