3rdp view changes

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -40,10 +40,14 @@
       -if @user == current_user
         %p.log.rel#nav-link mysong.is/#{@user.username}
 
+
     %img#logo{:src => "http://cheshirepus.com/mysongis_logo.png"}
 
     -if @user
       %img#qr-code{:alt => "My QR code", :src => @qr}
+  -if @user.twitter_user && @user != current_user
+    -twitter_page = @user.twitter_user.match(/twitter.com\/.*/)
+    %p.log.rel#nav-link #{twitter_page}
     / .row
     /   = image_tag('real_b.png', :class =>"one image")
     /   %a#about-us.bigger.image.white-text.stroke{:href => "/static_pages/bio"} About Us
