--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -23,9 +23,11 @@
 			- if current_user == nil || @user != current_user
 				= react_component 'ViewPlayer'
 				= react_component 'PlayMySongs', { mixtape_id: @mixtape_id, author_id: @user.id, play_method: @user.playMethod, profile_image_url: @user.picture, username: @user.username}
-				#song-display.mysong-main
-				%p#show-artist{:className => "song-description"} 
-				%p#show-title{:className => "song-description"}
+				.view-song-card#song-display.mysong-main
+					%p#show-artist{:className => "song-description"}
+					%p#show-title{:className => "song-description"}
+					#song-display.mysong-main
+
 
 - if @user == current_user
 	= react_component 'Player'
